--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "homepage": "https://github.com/pendle-finance/boros-core-public#readme",
     "packageManager": "yarn@4.9.2",
     "dependencies": {
+        "@layerzerolabs/lz-evm-protocol-v2": "3.0.148",
+        "@layerzerolabs/oapp-evm": "0.4.0",
+        "@layerzerolabs/oft-evm": "4.0.0",
         "@openzeppelin/contracts": "5.3.0",
         "@openzeppelin/contracts-upgradeable": "5.3.0"
     },
